# K-Growth-Insights

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  run.sh  stop.sh
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  timeutil.py
backend/app/routers/: alerts.py  data.py  etfs.py  market.py  news.py  scanner.py  settings.py  simulation.py  stocks.py
backend/app/services/: api_keys.py  catalog.py  collectors.py  comparison.py  insights.py  jobs.py  naver_client.py  repository.py  scanner.py  scheduler.py  simulation.py  stocks_sync.py
backend/config/: stocks.json
backend/tests/: conftest.py  test_alerts.py  test_catalog.py  test_collectors.py  test_comparison.py  test_fundamentals.py  test_insights.py  test_jobs.py  test_migration_phase1.py  test_naver_client.py  test_news.py  test_scanner.py  test_scanner_freshness.py  test_scheduler.py  test_settings.py  test_simulation.py  test_timeutil.py
desktop/: electron-builder.yml  loading.css  loading.html  main.js  package-lock.json  package.json  preload.js
desktop/icons/: icon.icns
desktop/scripts/: build.sh  generate-icons.js
docs/: migration-plan.md  plan.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  api.js  constants.js  index.css  main.jsx
frontend/src/components/: FundamentalsCard.jsx  InsightsCard.jsx  IntradayChart.jsx  NewsTimeline.jsx  PriceChart.jsx  TradingFlowChart.jsx
frontend/src/contexts/: AlertContext.jsx  (+4 more)
(+117 files in other folders)
